Fix T38356: Crash when UIList.filter_items returns too few items.